style: fix grid item alignment and grid container padding

--- a/scss/grid-system.scss
+++ b/scss/grid-system.scss
@@ -21,14 +21,6 @@ $gutter-xl: 32px;
   margin-right: calc(#{$gutter} / 2);
   margin-left: calc(#{$gutter} / 2);
   float: left;
-
-  &:first-child {
-    margin-left: 0;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
 }
 
 @mixin insertSmallCol($number, $gutter) {
@@ -69,13 +61,13 @@ $gutter-xl: 32px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 5.56%;
+  padding-right: 5.56%;
 
   .grid--row {
     @include clearfix();
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: wrap;
 
     @for $i from 1 through $columns-sm {
